# rgba

./: .gitattributes  Cargo.toml  LICENSE  build.rs  rustfmt.toml
src/: bit_twiddling.rs  bus.rs  cpu.rs  lib.rs  main.rs
src/cpu/: disassembly.rs  instruction.rs
tests/: mod.rs
tests/cpu/: decode_instruction.rs  mod.rs
